# PREPARE-Extraction-Tool

./: .env.example  .gitignore  README.md  docker-compose.yaml
backend/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  test.db
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  003_add_vocabulary_status_fields.py  008_add_refresh_token_and_concept_index.py  009_add_cluster_reviewed.py  010_add_vocabulary_user_id_index.py
backend/app/: main.py  models.py  models_db.py  schemas.py
backend/app/core/: database.py  elastic.py  exceptions.py  middleware.py  model_registry.py  settings.py
backend/app/core/models/: embedding_base.py  embedding_sentence.py
backend/app/routes/v1/: __init__.py  auth.py  bioner.py  clusters.py  datasets.py  health.py  index.py  login.py  mappings.py  source_term.py  vocabularies.py
backend/app/tests/: test_datasets.py  test_login.py  test_source_term.py  test_vocabularies.py
backend/app/utils/: fake_db.py
backend/docs/: migrations.md
backend/scripts/: alembic_autogenerate.sh  alembic_current.sh  alembic_downgrade.sh  alembic_history.sh  alembic_upgrade.sh  db_migrate.py
bioner/: Dockerfile  README.md  pyproject.toml
bioner/app/: main.py
bioner/app/engines/: __init__.py  base_engine.py  gliner_engine.py
bioner/app/utils/: prompts.py
frontend/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/api/: clusters.ts  datasets.ts  index.ts  vocabularies.ts
frontend/src/components/AuthProvider/: index.tsx
frontend/src/hooks/: useAuth.ts  useDatasets.ts  useExtractionPolling.ts  usePageTitle.ts  useRecords.ts  useSourceTerms.ts  useToast.ts  useVocabularies.ts  useVocabularyConcepts.ts
frontend/src/types/: index.ts
frontend/src/utils/: dateUtils.ts  formatters.ts  labelColors.ts
scripts/: seed.sh  seed_elasticsearch.sh  seed_postgres.sh
(+98 files in other folders)
