[project]
name = "backend"
version = "0.1.0"
description = "The backend for the PREPARE USAGI project"
readme = "README.md"
dynamic = ["dependencies"]
keywords = ["python", "machine learning", "natural language processing", "extraction", "vocabulary", "ohdsi"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.10,<3.14"

[project.optional-dependencies]
dev = ["python-githooks"]
test = [
    "pytest",
    "pytest-cov",
]
all = ["backend[dev,test]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*", "scripts*", "docs*", "tests*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }